--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 .DS_Store
 cloudFoundryOnAWS-Minimal/.DS_Store
 cloudFoundryOnAWS-Minimal/my-bosh/bosh.yml
-
+cloudFoundryOnAWS-Minimal/aws_credentials.csv
