--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ cloudFoundryOnAWS-Minimal/.DS_Store
 cloudFoundryOnAWS-Minimal/my-bosh/bosh.yml
 cloudFoundryOnAWS-Minimal/aws_credentials.csv
 cloudFoundryOnAWS-Minimal/my-bosh/bosh.pem
+.gitignore.swp
+cloudFoundryOnAWS-Minimal/my-bosh/bosh-state.json
